talos/istio/resources/istio-gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-api
spec:
  addresses:
    - value: 10.10.8.1 # the ip of the load balancer service
      type: IPAddress
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      hostname: "*.yanello.net"
      port: 80
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: http-root # need a separate listener for the root domain
      protocol: HTTP
      hostname: "yanello.net"
      port: 80
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: https
      protocol: HTTPS
      hostname: "*.yanello.net"
      port: 443
      tls:
        mode: Terminate # terminate at the edge gateway for now. mtls from gateway to services should be possible
        certificateRefs:
          - name: default-ingress-cert
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: https-root # need a separate listener for the root domain
      protocol: HTTPS
      hostname: "yanello.net"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: default-ingress-cert
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect # send http traffic to the https listener
spec:
  parentRefs:
    - name: gateway-api # what gateway is this route for
      sectionName: http
  hostnames:
    - "*.yanello.net"
    - "yanello.net"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
